@@ -27,8 +27,12 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.client.MultipartBodyBuilder;
+import org.springframework.http.codec.multipart.FilePart;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.reactive.server.WebTestClient;
+import org.springframework.web.reactive.function.BodyInserters;
 import reactor.core.publisher.Mono;
 
 @WebFluxTest(controllers = PointOfSaleTransactionControllerImpl.class)
@@ -60,11 +64,16 @@ class PointOfSaleTransactionControllerImplTest {
         PageRequest.of(0, 10), 1
     );
 
-    PointOfSaleTransactionDTO dto = PointOfSaleTransactionDTOFaker.mockInstance(trx, INITIATIVE_ID,
-        FISCAL_CODE);
+    PointOfSaleTransactionDTO dto = PointOfSaleTransactionDTOFaker
+        .mockInstance(trx, INITIATIVE_ID, FISCAL_CODE);
 
     when(pointOfSaleTransactionService.getPointOfSaleTransactions(
-        eq(MERCHANT_ID), eq(INITIATIVE_ID), eq(POINT_OF_SALE_ID), isNull(), isNull(), isNull(),
+        eq(MERCHANT_ID),
+        eq(INITIATIVE_ID),
+        eq(POINT_OF_SALE_ID),
+        isNull(),
+        isNull(),
+        isNull(),
         any(Pageable.class)))
         .thenReturn(Mono.just(page));
 
@@ -73,18 +82,18 @@ class PointOfSaleTransactionControllerImplTest {
 
     webClient.get()
         .uri(uriBuilder -> uriBuilder
-            .path(
-                "/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
+            .path("/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
             .build(INITIATIVE_ID, POINT_OF_SALE_ID))
         .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", POINT_OF_SALE_ID)
         .exchange()
         .expectStatus().isOk()
         .expectBody(PointOfSaleTransactionsListDTO.class)
         .value(res -> {
           assertNotNull(res);
           assertEquals(1, res.getContent().size());
-          assertEquals("TRX1", res.getContent().get(0).getTrxId());
-          assertEquals(FISCAL_CODE, res.getContent().get(0).getFiscalCode());
+          assertEquals("TRX1", res.getContent().getFirst().getTrxId());
+          assertEquals(FISCAL_CODE, res.getContent().getFirst().getFiscalCode());
           assertEquals(1, res.getTotalElements());
           assertEquals(1, res.getTotalPages());
           assertEquals(10, res.getPageSize());
@@ -136,6 +145,101 @@ class PointOfSaleTransactionControllerImplTest {
         .uri(uriBuilder -> uriBuilder
             .path("/idpay/{pointOfSaleId}/transactions/{transactionId}/download")
             .build(POINT_OF_SALE_ID, TRX_ID))
+        .exchange()
+        .expectStatus().isBadRequest();
+  }
+
+  @Test
+  void getPointOfSaleTransactionsForbidden() {
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
+            .build(INITIATIVE_ID, POINT_OF_SALE_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", "ALTRO_POS")
+        .exchange()
+        .expectStatus().isForbidden();
+  }
+
+  @Test
+  void downloadInvoiceShouldReturnForbiddenOnPosMismatch() {
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/{pointOfSaleId}/transactions/{transactionId}/download")
+            .build(POINT_OF_SALE_ID, TRX_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", "ALTRO_POS")
+        .exchange()
+        .expectStatus().isForbidden();
+  }
+
+  @Test
+  void downloadInvoiceShouldReturnOkWithoutPosHeader() {
+    doReturn(Mono.just(DownloadInvoiceResponseDTO.builder().invoiceUrl("testUrl").build()))
+        .when(pointOfSaleTransactionService).downloadTransactionInvoice(
+            MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/{pointOfSaleId}/transactions/{transactionId}/download")
+            .build(POINT_OF_SALE_ID, TRX_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .exchange()
+        .expectStatus().isOk()
+        .expectBody(DownloadInvoiceResponseDTO.class)
+        .value(res -> {
+          assertNotNull(res);
+          assertEquals("testUrl", res.getInvoiceUrl());
+        });
+  }
+
+  @Test
+  void updateInvoiceFileOk() {
+
+    when(pointOfSaleTransactionService.updateInvoiceTransaction(
+        eq(TRX_ID),
+        eq(MERCHANT_ID),
+        eq(POINT_OF_SALE_ID),
+        any(FilePart.class),
+        eq("DOC123")
+    )).thenReturn(Mono.empty());
+
+    MultipartBodyBuilder builder = new MultipartBodyBuilder();
+    builder.part("file", "dummycontent".getBytes())
+        .filename("invoice.pdf")
+        .contentType(MediaType.APPLICATION_OCTET_STREAM);
+    builder.part("docNumber", "DOC123");
+
+    webClient.put()
+        .uri("/idpay/transactions/{id}/invoice/update", TRX_ID)
+        .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", POINT_OF_SALE_ID)
+        .contentType(MediaType.MULTIPART_FORM_DATA)
+        .body(BodyInserters.fromMultipartData(builder.build()))
+        .exchange()
+        .expectStatus().isNoContent();
+
+    verify(pointOfSaleTransactionService).updateInvoiceTransaction(
+        eq(TRX_ID),
+        eq(MERCHANT_ID),
+        eq(POINT_OF_SALE_ID),
+        any(FilePart.class),
+        eq("DOC123")
+    );
+  }
+
+  @Test
+  void updateInvoiceFileBadRequestWhenMissingMerchantId() {
+    MultipartBodyBuilder builder = new MultipartBodyBuilder();
+    builder.part("file", "dummy".getBytes())
+        .filename("f.pdf")
+        .contentType(MediaType.APPLICATION_OCTET_STREAM);
+
+    webClient.put()
+        .uri("/idpay/transactions/{transactionId}/invoice/update", TRX_ID)
+        .header("x-point-of-sale-id", POINT_OF_SALE_ID)
+        .contentType(MediaType.MULTIPART_FORM_DATA)
+        .body(BodyInserters.fromMultipartData(builder.build()))
         .exchange()
         .expectStatus().isBadRequest();
   }
